=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Added: Allow _BRTM and other events as substitutes for BIRT/MARR/DIV/DEAT
 - Fixed: [ 1953881 ] 4.1.5rel ... FAm events not showing in Personal facts tab (fisharebest)
 - Fixed: Charts block needs horizontal scroll bar (canajun2eh)
 - Fixed: [ 1958447 ] 4.1.5 "On This Day" block needs simple message (canajun2eh)
 - Added: New block to display _TODO items (fisharebest)
 - Fixed: [ 1947080 ] mediafirewall - fix auto-generated .htaccess file when PGV is in the root directory
 - Changed: Show highlight and thumbnail Media options only to Admin users (canajun2eh)
 - Fixed: [ 1956830 ] (unknown) when name exists 
 - Fixed: [ 1954862 ] [4.1.5] Search engine visit errors (fisharebest)
 - Fixed: Place Hierarchy: Small change to align "bubble" background for themes Simplygreen, Simplyblue and Simplyred. (windmillway)
 - Fixed: Lightbox: Various CSS errors corrected (windmillway)
 - Fixed: [ 1955259 ] Pedigree Link from Tree shows without detail by default (canajun2eh)
 - Fixed: [ 1952553 ] SVN 2931 - Related facts - wrong titles of events on INDI (canajun2eh)
 - Fixed: [ 1954352 ] Placename Issue On Language Change For Some Themes (canajun2eh)
 - Fixed: [ 1952626 ] Place Hierarchy with GoogleMap - Umlauts in Place Name (canajun2eh)
 - Fixed: [ 1952654 ] 4.1.6 2931 Fatal error familysearch.php on line 160 (fisharebest)

Version 4.1.5 2008-04-27
 - Fixed: [ 1952284 ] Unknown names print without the (unknown) text (fisharebest)
 - Fixed: [ 1952073 ] SVN 2918 - STATS, bad SURN numbers (fisharebest)
 - Added: Standardised interface to CMS applications such as joomla, drupal, postnuke, etc. (fisharebest)
 - Fixed: [ 1951591 ] Error in Hebrew Date Editing (fisharebest)